# LMVM

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug-report-🐛.md  feature-request-💡.md  license-issue-🚨.md  maintainability-improvement-🔨.md  ux-improvement-🤗.md
examples/: count_to_5.asm  count_to_5.lmasm  divider.lmasm  valid_inp.lmasm
images/: header.xcf  icon.xcf  magick-convert.sh  welcome.xcf
include/: checked_alloc.h
include/assembler/: execgen.h  lexer.h  parser.h  validator.h
include/common/: executable_props.h  file_ext.h  file_io.h  opcodes.h
include/common/hashtable/: fnv1a.h  kv_dict.h
include/compiler/: lexer.h
include/vm/: execution.h
scripts/: GetGitRevisionDescription.cmake  make_installer.cmake  reg_associations.nsh  unreg_associations.nsh
scripts/cmake_modules/: DetectArch.cmake  FindNSIS.cmake  GetGitRevisionDescription.cmake
scripts/nsis_template/: NSIS.InstallOptions.ini.in  NSIS.template.in
src/: lexer.c  main.c
src/assembler/: execgen.c  icon.rc  lexer.c  main.c  parser.c  validator.c
src/common/: checked_alloc.c  file_io.c
src/common/hashtable/: fnv1a.c  kv_dict.c
src/compiler/: lexer.c  main.c
src/vm/: execution.c  icon.rc  main.c
